# mongodb

./: Cargo.toml
src/: main.rs
src/config/: db_connection.rs
src/data/: photo.rs  post.rs
src/global/: store.rs
src/structure/: mod.rs  photo.rs  post.rs
